--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--<script src="https://unpkg.com/vue"></script>-->
+    <script src="vue.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Web Notebook</title>
 </head>
 <body>
-    <div >
-
+    <div id="vue-app">
+        <h1>{{name}}</h1>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
